--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeicons/primeicons.css";
+@import "tailwindcss";
+
+body {
+  background-color: white !important;
+  color: black;
+}
+
+.p-inputtext {
+  background: white !important;
+  color: black;
+}
